# Rust-Discord-Bot

./: Cargo.toml
.fleet/: run.json
src/: event_handler.rs  guild_state.rs  main.rs  music.rs
src/commands/: mod.rs
src/commands/general/: activity.rs  mod.rs  ping.rs
src/commands/music/: join.rs  leave.rs  loop.rs  mod.rs  play.rs  skip.rs  stop.rs
src/music/: mod.rs  queue.rs
