[package]
name = "music_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
tracing = "0.1"
tracing-subscriber = "0.3.16"
tracing-futures = "0.2"
rand = "0.7.3"
serde = "1.0.105"
serde_derive = "1.0.105"

[dependencies.serenity]
version = "0.11"
features = ["cache", "framework", "standard_framework", "rustls_backend"]

[dependencies.songbird]
version = "0.3.1"
features = ["default", "yt-dlp", "builtin-queue"]

[dependencies.tokio]
version = "1.21.2"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.reqwest]
version = "0.10.4"
default-features = false
futures = ["json", "blocking", "rustls-tls"]